add drinking of clean water via fountain

--- a/mods/thirsty/thirsty.default.conf
+++ b/mods/thirsty/thirsty.default.conf
@@ -96,6 +96,7 @@ thirsty.config = {
         20 points
     ]]
     container_capacity = {
+		['thirsty:wooden_bowl'] = 20,
         ['thirsty:steel_canteen'] = 40,
         ['thirsty:bronze_canteen'] = 60,
     },
