add stone canteen

--- a/mods/thirsty/thirsty.default.conf
+++ b/mods/thirsty/thirsty.default.conf
@@ -83,6 +83,7 @@ thirsty.config = {
       ]]
     drink_from_container = {
         ['thirsty:wooden_bowl'] = 25,
+        ['thirsty:stone_canteen'] = 25,
         ['thirsty:steel_canteen'] = 25,
         ['thirsty:bronze_canteen'] = 25,
     },
@@ -96,7 +97,7 @@ thirsty.config = {
         20 points
     ]]
     container_capacity = {
-		['thirsty:wooden_bowl'] = 20,
+		['thirsty:stone_canteen'] = 20,
         ['thirsty:steel_canteen'] = 40,
         ['thirsty:bronze_canteen'] = 60,
     },
