--- a/mods/petz/petz/petz.conf
+++ b/mods/petz/petz/petz.conf
@@ -93,8 +93,8 @@ look_at_random = 10
 
 ##Breed System
 pregnant_count = 5
-pregnancy_time = 300*4
-growth_time = 1200*4
+pregnancy_time = 1200
+growth_time = 4800
 
 ##Bloody Mode
 blood = true
