removecheese block add craft for pet bowl

--- a/mods/mobs_farm/mod.conf
+++ b/mods/mobs_farm/mod.conf
@@ -1,4 +1,4 @@
 name = mobs_farm
 depends = mobs
-optional_depends = default, lucky_block, intllib, farming
+optional_depends = default, lucky_block, intllib, farming, basic_materials, dyes
 description = Adds farm animals.
