update char anim

--- a/mods/character_anim/mod.conf
+++ b/mods/character_anim/mod.conf
@@ -3,4 +3,5 @@ title = Character Animations
 description = Animates the character
 author = LMD aka appguru(eu)
 depends = modlib
+# these mods are supported, but don't necessarily need to load before character_anim
 optional_depends = player_api, 3d_armor, skinsdb
