--- a/mods/character_anim/mod.conf
+++ b/mods/character_anim/mod.conf
@@ -2,6 +2,6 @@ name = character_anim
 title = Character Animations
 description = Animates the character
 author = LMD aka appguru(eu)
-depends = modlib, disablemod
+depends = modlib
 # these mods are supported, but don't necessarily need to load before character_anim
 optional_depends = player_api, 3d_armor, skinsdb
