update hunger and thirst

--- a/mods/thirsty/thirsty.conf
+++ b/mods/thirsty/thirsty.conf
@@ -35,7 +35,7 @@ thirsty.config = {
     -------------------------------------------
 
     -- Thirst per second (full hydration is 20 hydro points)
-    thirst_per_second = 1.0 / 400,
+    thirst_per_second = 1.0 / 200,
 
     -- Damage per second if completely thirsty / out of hydration
     damage_per_second = 1.0 / 10.0,
@@ -49,7 +49,7 @@ thirsty.config = {
          AFK (away from keyboard), such players no longer get thirsty
          or damaged
       ]]
-    stand_still_for_afk = 0, -- 2 Minutes
+    stand_still_for_afk = 216,000, -- 1 Hour
 
     --[[ regen_from_node is a table defining, for each node type, the
          amount of hydro per second a player drinks by standing in it.
