--- a/mods/grenades_basic/mod.conf
+++ b/mods/grenades_basic/mod.conf
@@ -1,3 +1,3 @@
 name = grenades_basic
 depends = grenades, default
-optional_depends = technic, farming
+optional_depends = technic, farming, assembler
