Upgrade modlib, cmdlib, and character_anim

--- a/mods/modlib/mod.conf
+++ b/mods/modlib/mod.conf
@@ -1,3 +1,5 @@
-name=modlib
-description=Multipurpose Minetest Modding Library
-author=LMD aka appguru(eu)
+name = modlib
+title = Modding Library
+description = Multipurpose Minetest Modding Library
+author = LMD aka appguru(eu)
+optional_depends = dbg, strictest
