--- a/mods/modlib/mod.conf
+++ b/mods/modlib/mod.conf
@@ -1,5 +1,3 @@
-name = modlib
-title = Modding Library
-description = Multipurpose Minetest Modding Library
-author = LMD aka appguru(eu)
-optional_depends = dbg, strictest
+name=modlib
+description=Multipurpose Minetest Modding Library
+author=LMD aka appguru(eu)
